# DataFrame

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  codecov.yml  csv_example1.csv  csv_wronglength.csv  dataframe.cpp  dataframe.h  main.cpp  makefile  simply_example.py  tags
dataframe/: Column.cpp  Column.h  ColumnIterator.h  ConstColumnIterator.h  GroupbyFunctions.h  column.cpp  column.h  csv_reader.cpp  dataframe.cpp  dataframe.h  dataframeproxy.cpp  dataframeproxy.h  grouper.cpp  grouper.h  index.cpp  index.h  operators.cpp  print.cpp
documentation/html/: ColumnIterator_8h_source.html  ConstColumnIterator_8h_source.html  GroupbyFunctions_8h_source.html  annotated.html  classColumn-members.html  classColumn.html  classDataFrame-members.html  classDataFrame.html  classDataFrame_1_1ColumnIterator-members.html  classDataFrame_1_1ColumnIterator.html  classDataFrame_1_1ColumnIterator__coll__graph.map  classDataFrame_1_1ColumnIterator__coll__graph.md5  classDataFrame_1_1ConstColumnIterator-members.html  classDataFrame_1_1ConstColumnIterator.html  classDataFrame_1_1ConstColumnIterator__coll__graph.map  classDataFrame_1_1ConstColumnIterator__coll__graph.md5  classDataFrame_1_1DataFrameProxy-members.html  classDataFrame_1_1DataFrameProxy.html  classDataFrame_1_1DataFrameProxy__coll__graph.dot  classDataFrame_1_1DataFrameProxy__coll__graph.map  classDataFrame_1_1DataFrameProxy__coll__graph.md5  classDataFrame_1_1Grouper-members.html  classDataFrame_1_1Grouper.html  classDataFrame_1_1Grouper__coll__graph.dot  classDataFrame_1_1Grouper__coll__graph.md5  classDataFrame_1_1const__iterator-members.html  classDataFrame_1_1const__iterator.html  classDataFrame_1_1const__iterator__coll__graph.dot  classDataFrame_1_1const__iterator__coll__graph.md5  classDataFrame_1_1iterator-members.html  classDataFrame_1_1iterator.html  classDataFrame_1_1iterator__coll__graph.dot  classDataFrame_1_1iterator__coll__graph.md5  classDataFrame__coll__graph.dot  classDataFrame__coll__graph.md5  classIndex-members.html  classIndex.html  classStatistic-members.html  classStatistic.html  classStatistic__coll__graph.dot  (+43 more)
documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  related_0.js  related_1.js  searchdata.js
documentation/latex/: annotated.tex  classColumn.tex  classDataFrame.tex  classDataFrame_1_1ColumnIterator.tex  classDataFrame_1_1ColumnIterator__coll__graph.md5  classDataFrame_1_1ConstColumnIterator.tex  classDataFrame_1_1ConstColumnIterator__coll__graph.md5  classDataFrame_1_1DataFrameProxy.tex  classDataFrame_1_1DataFrameProxy__coll__graph.dot  classDataFrame_1_1DataFrameProxy__coll__graph.md5  classDataFrame_1_1Grouper.tex  classDataFrame_1_1Grouper__coll__graph.dot  classDataFrame_1_1Grouper__coll__graph.md5  classDataFrame_1_1const__iterator.tex  classDataFrame_1_1const__iterator__coll__graph.dot  classDataFrame_1_1const__iterator__coll__graph.md5  classDataFrame_1_1iterator.tex  classDataFrame_1_1iterator__coll__graph.dot  classDataFrame_1_1iterator__coll__graph.md5  classDataFrame__coll__graph.dot  classDataFrame__coll__graph.md5  classIndex.tex  classStatistic.tex  classStatistic__coll__graph.dot  classStatistic__coll__graph.md5  classStatistic__inherit__graph.dot  classStatistic__inherit__graph.md5  classcount.tex  classcount.tex.tmp  classcount__coll__graph.dot  classcount__coll__graph.md5  classcount__inherit__graph.dot  classcount__inherit__graph.md5  classmean.tex  classmean__coll__graph.dot  classmean__coll__graph.md5  classmean__inherit__graph.dot  classmean__inherit__graph.md5  dir_77cb55048e88827cd0e977a3610e1e92.tex  hierarchy.tex  (+2 more)
test/: additions.cpp  constructor.cpp  convenience_functions.cpp  csv.cpp  csv_wrongtype.csv  droprows.csv  groupby.cpp  index_test.cpp  iterator.cpp  mae_example.cpp  main.cpp  old_main.cpp  operator.cpp  operator_test.cpp  operator_test_out.txt  test.cpp  test_groupby.cpp
